// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chart engine SVG > renders deterministic multi-series bar with a legend 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="720" height="436" viewBox="0 0 720 436" role="img" aria-labelledby="chart-title chart-description">
  <title id="chart-title">API latency</title>
  <desc id="chart-description">p50: v1: 31 ms; v2: 43 ms; v3: 68 ms. p95: v1: 62 ms; v2: 89 ms; v3: 142 ms. p99: v1: 91 ms; v2: 137 ms; v3: 219 ms</desc>
  <rect width="100%" height="100%" fill="#ffffff"/>
  <g font-family="system-ui, -apple-system, Segoe UI, sans-serif" font-size="12" fill="#24292f">
    <text x="24" y="32" text-anchor="start" font-size="20" font-weight="600"><title>API latency</title>API latency</text>
    <rect x="24" y="49" width="14" height="14" fill="#0969da"/>
    <text x="54" y="62" text-anchor="start"><title>p50</title>p50</text>
    <rect x="248" y="49" width="14" height="14" fill="#bf3989"/>
    <text x="278" y="62" text-anchor="start"><title>p95</title>p95</text>
    <rect x="472" y="49" width="14" height="14" fill="#1a7f37"/>
    <text x="502" y="62" text-anchor="start"><title>p99</title>p99</text>
    <text x="375" y="414" text-anchor="middle"><title>Version</title>Version</text>
    <text x="20" y="234" text-anchor="middle" transform="rotate(-90 20 234)"><title>Latency (ms)</title>Latency (ms)</text>
    <path d="M 94 352 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="356" text-anchor="end"><title>0</title>0</text>
    <path d="M 94 304.8 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="308.8" text-anchor="end"><title>50</title>50</text>
    <path d="M 94 257.6 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="261.6" text-anchor="end"><title>100</title>100</text>
    <path d="M 94 210.4 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="214.4" text-anchor="end"><title>150</title>150</text>
    <path d="M 94 163.2 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="167.2" text-anchor="end"><title>200</title>200</text>
    <path d="M 94 116 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="120" text-anchor="end"><title>250</title>250</text>
    <path d="M 94 352 H 656" fill="none" stroke="#57606a"/>
    <text x="187.667" y="392" text-anchor="middle"><title>v1</title>v1</text>
    <text x="375" y="392" text-anchor="middle"><title>v2</title>v2</text>
    <text x="562.333" y="392" text-anchor="middle"><title>v3</title>v3</text>
    <rect x="122.924" y="322.736" width="39.565" height="29.264" fill="#0969da"><title>p50 — v1: 31 ms</title></rect>
    <rect x="310.258" y="311.408" width="39.565" height="40.592" fill="#0969da"><title>p50 — v2: 43 ms</title></rect>
    <rect x="497.591" y="287.808" width="39.565" height="64.192" fill="#0969da"><title>p50 — v3: 68 ms</title></rect>
    <rect x="167.884" y="293.472" width="39.565" height="58.528" fill="#bf3989"><title>p95 — v1: 62 ms</title></rect>
    <rect x="355.218" y="267.984" width="39.565" height="84.016" fill="#bf3989"><title>p95 — v2: 89 ms</title></rect>
    <rect x="542.551" y="217.952" width="39.565" height="134.048" fill="#bf3989"><title>p95 — v3: 142 ms</title></rect>
    <rect x="212.844" y="266.096" width="39.565" height="85.904" fill="#1a7f37"><title>p99 — v1: 91 ms</title></rect>
    <rect x="400.178" y="222.672" width="39.565" height="129.328" fill="#1a7f37"><title>p99 — v2: 137 ms</title></rect>
    <rect x="587.511" y="145.264" width="39.565" height="206.736" fill="#1a7f37"><title>p99 — v3: 219 ms</title></rect>
  </g>
</svg>
"
`;

exports[`chart engine SVG > renders deterministic multi-series horizontal-bar with a legend 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="800" height="458" viewBox="0 0 800 458" role="img" aria-labelledby="chart-title chart-description">
  <title id="chart-title">API latency</title>
  <desc id="chart-description">p50: v1: 31 ms; v2: 43 ms; v3: 68 ms. p95: v1: 62 ms; v2: 89 ms; v3: 142 ms. p99: v1: 91 ms; v2: 137 ms; v3: 219 ms</desc>
  <rect width="100%" height="100%" fill="#ffffff"/>
  <g font-family="system-ui, -apple-system, Segoe UI, sans-serif" font-size="12" fill="#24292f">
    <text x="24" y="32" text-anchor="start" font-size="20" font-weight="600"><title>API latency</title>API latency</text>
    <rect x="24" y="49" width="14" height="14" fill="#0969da"/>
    <text x="54" y="62" text-anchor="start"><title>p50</title>p50</text>
    <rect x="274.667" y="49" width="14" height="14" fill="#bf3989"/>
    <text x="304.667" y="62" text-anchor="start"><title>p95</title>p95</text>
    <rect x="525.333" y="49" width="14" height="14" fill="#1a7f37"/>
    <text x="555.333" y="62" text-anchor="start"><title>p99</title>p99</text>
    <text x="473" y="436" text-anchor="middle"><title>Latency (ms)</title>Latency (ms)</text>
    <text x="20" y="245" text-anchor="middle" transform="rotate(-90 20 245)"><title>Version</title>Version</text>
    <path d="M 210 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="210" y="398" text-anchor="middle"><title>0</title>0</text>
    <path d="M 315.2 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="315.2" y="398" text-anchor="middle"><title>50</title>50</text>
    <path d="M 420.4 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="420.4" y="398" text-anchor="middle"><title>100</title>100</text>
    <path d="M 525.6 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="525.6" y="398" text-anchor="middle"><title>150</title>150</text>
    <path d="M 630.8 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="630.8" y="398" text-anchor="middle"><title>200</title>200</text>
    <path d="M 736 116 V 374" fill="none" stroke="#d8dee4"/>
    <text x="736" y="398" text-anchor="middle"><title>250</title>250</text>
    <path d="M 210 116 V 374" fill="none" stroke="#57606a"/>
    <text x="196" y="163" text-anchor="end"><title>v1</title>v1</text>
    <text x="196" y="249" text-anchor="end"><title>v2</title>v2</text>
    <text x="196" y="335" text-anchor="end"><title>v3</title>v3</text>
    <rect x="210" y="130.2" width="65.224" height="17.6" fill="#0969da"><title>p50 — v1: 31 ms</title></rect>
    <rect x="210" y="216.2" width="90.472" height="17.6" fill="#0969da"><title>p50 — v2: 43 ms</title></rect>
    <rect x="210" y="302.2" width="143.072" height="17.6" fill="#0969da"><title>p50 — v3: 68 ms</title></rect>
    <rect x="210" y="150.2" width="130.448" height="17.6" fill="#bf3989"><title>p95 — v1: 62 ms</title></rect>
    <rect x="210" y="236.2" width="187.256" height="17.6" fill="#bf3989"><title>p95 — v2: 89 ms</title></rect>
    <rect x="210" y="322.2" width="298.768" height="17.6" fill="#bf3989"><title>p95 — v3: 142 ms</title></rect>
    <rect x="210" y="170.2" width="191.464" height="17.6" fill="#1a7f37"><title>p99 — v1: 91 ms</title></rect>
    <rect x="210" y="256.2" width="288.248" height="17.6" fill="#1a7f37"><title>p99 — v2: 137 ms</title></rect>
    <rect x="210" y="342.2" width="460.776" height="17.6" fill="#1a7f37"><title>p99 — v3: 219 ms</title></rect>
  </g>
</svg>
"
`;

exports[`chart engine SVG > renders deterministic multi-series line with a legend 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="720" height="436" viewBox="0 0 720 436" role="img" aria-labelledby="chart-title chart-description">
  <title id="chart-title">API latency</title>
  <desc id="chart-description">p50: v1: 31 ms; v2: 43 ms; v3: 68 ms. p95: v1: 62 ms; v2: 89 ms; v3: 142 ms. p99: v1: 91 ms; v2: 137 ms; v3: 219 ms</desc>
  <rect width="100%" height="100%" fill="#ffffff"/>
  <g font-family="system-ui, -apple-system, Segoe UI, sans-serif" font-size="12" fill="#24292f">
    <text x="24" y="32" text-anchor="start" font-size="20" font-weight="600"><title>API latency</title>API latency</text>
    <path d="M 24 58 h 22" fill="none" stroke="#0969da" stroke-width="2" stroke-dasharray=""/>
    <text x="54" y="62" text-anchor="start"><title>p50</title>p50</text>
    <path d="M 248 58 h 22" fill="none" stroke="#bf3989" stroke-width="2" stroke-dasharray="8 4"/>
    <text x="278" y="62" text-anchor="start"><title>p95</title>p95</text>
    <path d="M 472 58 h 22" fill="none" stroke="#1a7f37" stroke-width="2" stroke-dasharray="2 3"/>
    <text x="502" y="62" text-anchor="start"><title>p99</title>p99</text>
    <text x="375" y="414" text-anchor="middle"><title>Version</title>Version</text>
    <text x="20" y="234" text-anchor="middle" transform="rotate(-90 20 234)"><title>Latency (ms)</title>Latency (ms)</text>
    <path d="M 94 352 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="356" text-anchor="end"><title>0</title>0</text>
    <path d="M 94 304.8 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="308.8" text-anchor="end"><title>50</title>50</text>
    <path d="M 94 257.6 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="261.6" text-anchor="end"><title>100</title>100</text>
    <path d="M 94 210.4 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="214.4" text-anchor="end"><title>150</title>150</text>
    <path d="M 94 163.2 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="167.2" text-anchor="end"><title>200</title>200</text>
    <path d="M 94 116 H 656" fill="none" stroke="#d8dee4"/>
    <text x="82" y="120" text-anchor="end"><title>250</title>250</text>
    <path d="M 94 352 H 656" fill="none" stroke="#57606a"/>
    <text x="187.667" y="392" text-anchor="middle"><title>v1</title>v1</text>
    <text x="375" y="392" text-anchor="middle"><title>v2</title>v2</text>
    <text x="562.333" y="392" text-anchor="middle"><title>v3</title>v3</text>
    <path d="M 187.667 322.736 L 375 311.408 L 562.333 287.808" fill="none" stroke="#0969da" stroke-width="2" stroke-linejoin="round" stroke-dasharray=""/>
    <circle cx="187.667" cy="322.736" r="4" fill="#0969da"><title>p50 — v1: 31 ms</title></circle>
    <circle cx="375" cy="311.408" r="4" fill="#0969da"><title>p50 — v2: 43 ms</title></circle>
    <circle cx="562.333" cy="287.808" r="4" fill="#0969da"><title>p50 — v3: 68 ms</title></circle>
    <path d="M 187.667 293.472 L 375 267.984 L 562.333 217.952" fill="none" stroke="#bf3989" stroke-width="2" stroke-linejoin="round" stroke-dasharray="8 4"/>
    <rect x="183.667" y="289.472" width="8" height="8" fill="#bf3989"><title>p95 — v1: 62 ms</title></rect>
    <rect x="371" y="263.984" width="8" height="8" fill="#bf3989"><title>p95 — v2: 89 ms</title></rect>
    <rect x="558.333" y="213.952" width="8" height="8" fill="#bf3989"><title>p95 — v3: 142 ms</title></rect>
    <path d="M 187.667 266.096 L 375 222.672 L 562.333 145.264" fill="none" stroke="#1a7f37" stroke-width="2" stroke-linejoin="round" stroke-dasharray="2 3"/>
    <path d="M 187.667 261.096 l 5 5 -5 5 -5 -5 Z" fill="#1a7f37"><title>p99 — v1: 91 ms</title></path>
    <path d="M 375 217.672 l 5 5 -5 5 -5 -5 Z" fill="#1a7f37"><title>p99 — v2: 137 ms</title></path>
    <path d="M 562.333 140.264 l 5 5 -5 5 -5 -5 Z" fill="#1a7f37"><title>p99 — v3: 219 ms</title></path>
  </g>
</svg>
"
`;
